--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <div class="jumbotron masthead">
   <div class="container">
-    <h1>Bootstrapkkkk</h1>
+    <h1>이지호 환영</h1>
     <p>Sleek, intuitive, and powerful front-end framework for faster and easier web development.</p>
     <p>
       <a href="assets/bootstrap.zip" class="btn btn-primary btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Download', 'Download 2.3.2']);">Download Bootstrap</a>
