--- a/frameTop.html
+++ b/frameTop.html
@@ -74,29 +74,29 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html">Tanzania e Single Window</a>
+          <a class="brand" href="./index.html">Tanzania Electronic Single Window</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active">
-                <a href="./index.html">Home</a>
+                <a href="./index1.html">TeSW Home</a>
               </li>
               <li class="">
                 <a href="#">Get started</a>
               </li>
               <li class="">
-                <a href="./scaffolding.html">Scaffolding</a>
+                <a href="#">My Customs</a>
               </li>
               <li class="">
-                <a href="./base-css.html">Base CSS</a>
+                <a href="#">Joint Inspection</a>
               </li>
               <li class="">
-                <a href="./components.html">Components</a>
+                <a href="#">We can</a>
               </li>
               <li class="">
-                <a href="./javascript.html">JavaScript</a>
+                <a href="#">Trade Statistics</a>
               </li>
               <li class="">
-                <a href="./customize.html">Customize</a>
+                <a href="#">Trade Manual</a>
               </li>
             </ul>
           </div>
